...
            </objects>
            <point key="canvasLocation" x="-691" y="-805"/>
        </scene>
        <!--Events-->
        <scene sceneID="NbQ-Nl-2Dw">
            <objects>
                <tableViewController title="Events" id="ScL-TP-00b" customClass="EventsTableViewController" customModule="app_danceblue" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="365" sectionHeaderHeight="28" sectionFooterHeight="28" id="ObB-9b-F1M">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="643"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="365" id="wyD-6s-PQU" customClass="EventTableViewCell" customModule="app_danceblue" customModuleProvider="target">
...
            </objects>
            <point key="canvasLocation" x="-1894" y="1369"/>
        </scene>
        <!--Blog-->
        <scene sceneID="fx6-g9-wdS">
            <objects>
                <collectionViewController title="Blog" id="YUs-4s-Z3l" customClass="BlogCollectionViewController" customModule="app_danceblue" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="piD-VI-6Sc">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qR8-Jp-V40">
                            <size key="itemSize" width="373" height="264"/>
...
            </objects>
            <point key="canvasLocation" x="-219" y="660"/>
        </scene>
        <!--More-->
        <scene sceneID="EHr-VB-RVn">
            <objects>
                <viewControllerPlaceholder storyboardIdentifier="Events" storyboardName="More" id="pFU-gU-0sc" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="bPO-yD-sZY"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="w2H-84-VcT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="396" y="351"/>
        </scene>
...
